...
                    .fillMaxWidth()
                    .padding(spacing.spaceMedium)
                    //help to prevent long search word
                    .padding(end =spacing.spaceMedium)
                    //trigger our onFocusChange() with the new focus
                    .onFocusChanged { onFocusChange(it) }
                    .testTag("search_textfield")// help find this node during testing
                    


        )

        //show hint on top of the TextField
...
