...
                                width = 0.5.dp,
                                color = MaterialTheme.colors.onSurface
                            )
                            .alignBy(LastBaseline)
        
                                . semantics {
                            contentDescription = "Amount"
                        }
                            .padding(spacing.spaceMedium),
                        singleLine = true


                    )
...
